[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["AndreyKozachok <kozachok_andrey@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
